Made some changes in HTML.
Replaced tab names.

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                     Travel
                   </button>
                   <button class="nav-popular__item" type="button">
-                    Fashion
+                    Technology
                   </button>
                   <button class="nav-popular__item" type="button">
-                    Technology
+                    Fashion
                   </button>
                 </nav>
               </div>
@@ -451,7 +451,7 @@
                         </p>
                       </div>
                     </article>
-                    <article class="popular__item item-popular">
+                    <article data-item class="popular__item item-popular">
                       <a href="" class="item-popular__category category"
                         >FASHION</a
                       >
